force-app/main/default/objects/Policy__c/fields/Conversion_Credit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Credit_Expiration_Date__c</fullName>
    <formula>Effective_Date__c + 5*365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Credit Expiration Date</label>
    <type>Date</type>
</CustomField>