force-app/main/default/objects/Policy__c/fields/Days_To_AATC_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_To_AATC_Expiration__c</fullName>
    <formula>Attained_Age_Term_Conversion_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To AATC Expiration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>