force-app/main/default/objects/Policy__c/fields/Days_to_Conversion_Credit_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Conversion_Credit_Expiration__c</fullName>
    <formula>Conversion_Credit_Expiration_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Conversion Credit Expiration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>