force-app/main/default/objects/Policy__c/fields/Days_to_Term_Conv_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Term_Conv_Expiry__c</fullName>
    <formula>Today() - Term_Conversion_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Term Conv. Expiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>