force-app/main/default/objects/Policy__c/fields/Original_Age_Term_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Attained_Age_Term_Conversion_Date__c</fullName>
    <label>Attained Age Term Conversion Date</label>
    <type>Date</type>
</CustomField>