force-app/main/default/objects/Policy__c/fields/Term_Conversion_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Term_Conversion_Expiration__c</fullName>
    <label>Term Conversion Expiration Date</label>
    <type>Date</type>
</CustomField>